deployment/monitoring/grafana-prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-prometheus-ingress
  namespace: monitoring
  annotations:
      kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: grafana.k8s
    http:
      paths:
      - backend:
          serviceName: kube-prometheus-grafana
          servicePort: 80
  - host: prometheus.k8s
    http:
      paths:
      - backend:
         serviceName: kube-prometheus
         servicePort: 9090
